[gd_scene load_steps=27 format=2]

[ext_resource path="res://Menu/Setting.gd" type="Script" id=1]
[ext_resource path="res://Menu/Grass_field-1.png.png" type="Texture" id=2]
[ext_resource path="res://Menu/setting_style.tres" type="StyleBox" id=3]
[ext_resource path="res://Menu/setting_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Menu/setting_normal.tres" type="StyleBox" id=6]
[ext_resource path="res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=4]
size = 250
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=31]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=20]
size = 250
extra_spacing_bottom = 10
font_data = SubResource( 31 )
fallback/0 = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=30]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=21]
size = 200
font_data = SubResource( 30 )
fallback/0 = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=22]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=23]
size = 130
extra_spacing_top = 170
font_data = SubResource( 22 )
fallback/0 = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=24]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=25]
size = 120
font_data = SubResource( 22 )
fallback/0 = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=26]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.054902, 0.537255, 0.0745098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_right = 100
corner_radius_bottom_right = 100

[sub_resource type="DynamicFontData" id=19]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = SubResource( 19 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.203922, 0.960784, 0.533333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.192157, 0.192157, 0.192157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFontData" id=17]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=18]
size = 150
font_data = SubResource( 17 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=15]
size = 200
font_data = SubResource( 14 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -1926.0
margin_top = -1112.0
margin_right = 1965.0
margin_bottom = 1126.0

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 1917, 2717 )
scale = Vector2( 9.50753, 14.1772 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3.5, 3.5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -597.0
margin_top = -1045.0
margin_right = 572.0
margin_bottom = 1046.0

[node name="Full_screen" type="Button" parent="VBoxContainer"]
margin_right = 1244.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "FullScreen"

[node name="vsync" type="CheckButton" parent="VBoxContainer"]
visible = false
margin_top = 523.0
margin_right = 1244.0
margin_bottom = 1043.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 20 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "V-Sync"

[node name="fps_counter" type="CheckButton" parent="VBoxContainer"]
margin_top = 419.0
margin_right = 1244.0
margin_bottom = 834.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 21 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "Fps_counter"

[node name="sfx_mute" type="CheckButton" parent="VBoxContainer"]
margin_top = 838.0
margin_right = 1244.0
margin_bottom = 1253.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 21 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "sfx_mute"

[node name="music_mute" type="CheckButton" parent="VBoxContainer"]
margin_top = 1257.0
margin_right = 1244.0
margin_bottom = 1672.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 21 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "music_mute"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1676.0
margin_right = 1244.0
margin_bottom = 2091.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 520.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
text = "Fps Limit:"

[node name="fps" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 524.0
margin_right = 1244.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "60"

[node name="vsync2" type="CheckButton" parent="VBoxContainer"]
visible = false
margin_top = 523.0
margin_right = 1244.0
margin_bottom = 1043.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 20 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "V-Sync"

[node name="Back To Menu" type="Button" parent="."]
margin_left = -1804.0
margin_top = 832.0
margin_right = -1008.0
margin_bottom = 1068.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Back To Menu"

[node name="WindowDialog" type="Panel" parent="."]
visible = false
margin_left = -733.0
margin_top = -309.0
margin_right = 734.0
margin_bottom = 262.0
custom_styles/panel = SubResource( 16 )

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 50.0
margin_top = 151.0
margin_right = 1529.0
margin_bottom = 703.0
custom_fonts/font = SubResource( 18 )
text = "Can't Find Save File
"

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="Popup"]
margin_left = -1030.0
margin_right = 1025.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 15 )
text = "Text"

[connection signal="pressed" from="VBoxContainer/Full_screen" to="." method="_on_Load_1_pressed"]
[connection signal="pressed" from="VBoxContainer/vsync" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="VBoxContainer/fps_counter" to="." method="_on_fps_counter_pressed"]
[connection signal="pressed" from="VBoxContainer/sfx_mute" to="." method="_on_sfx_mute_pressed"]
[connection signal="pressed" from="VBoxContainer/music_mute" to="." method="_on_music_mute_pressed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/fps" to="." method="_on_fps_text_entered"]
[connection signal="pressed" from="VBoxContainer/vsync2" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="Back To Menu" to="." method="_on_Back_To_Menu_pressed"]
[connection signal="text_entered" from="Popup/LineEdit" to="." method="_on_LineEdit_text_entered"]
